src/test/deca/syntax/invalid/test_synt/class/false_name_class.deca
// Description:
//    Test de declaration d'une classe dans laquelle la premiere lettre est un chiffre
//
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: erreur de syntax -->  ident ne commence pas par des chiffres
//
// Historique:
//    cree le 19/01/2022



   class 1coordonnees{
       int x;

   }
{
}